--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "univiz"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
 unicode-segmentation = "1.12.0"
 unicode-width = "0.2.2"
-colored = "2.0"
+colored = "3.0"
 unicode_names2 = "2.0.0"
+clap = { version = "4.5", features = ["derive"] }
