--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ homepage = "https://github.com/bozenalabs/univiz"
 keywords = ["unicode", "grapheme", "utf8", "analysis", "cli"]
 categories = ["command-line-utilities", "text-processing"]
 authors = ["Bozena Labs"]
+exclude = ["vhs/*.gif"]
 
 [dependencies]
 unicode-segmentation = "1.12.0"
